tests/ui/pattern/pattern-bad-ref-box-order.stderr
error: switch the order of `ref` and `box`
  --> $DIR/pattern-bad-ref-box-order.rs:8:14
   |
LL |         Some(ref box _i) => {},
   |              ^^^^^^^
   |
help: swap them
   |
LL -         Some(ref box _i) => {},
LL +         Some(box ref _i) => {},
   |

error: aborting due to 1 previous error

